--- a/src/lib/css/stylesheet.css
+++ b/src/lib/css/stylesheet.css
@@ -1,4 +1,4 @@
-*{
+* {
     box-sizing: border-box;
 }
 
@@ -7,7 +7,8 @@
     src: url($lib/assets/fonts/LondrinaSketch-Regular.ttf);
 }
 
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     font-family: var(--main-font);
@@ -32,18 +33,25 @@ body {
     /* COLORS */
     --main-background-color: #F3E3D7;
     --main-text-color: #C91833;
+    --squad-number-sidebar-inactive: #c918327c;
 
 }
 
 /*----------------------------------- VARIABELEN VOOR ALLE KNOPPEN EN ANDERE ELEMENTEN --------------------------------------*/
 
-h1{
+h1 {
     font-size: clamp(2.5em, 10vw, 6.5em);
 }
 
+p, .filterButton {
+    font-size: clamp(1.3em, 2vw, 2em);
+}
+
+
+
 /*----------------------------------- BACKGROUND --------------------------------------*/
 
-.background{
+.background {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -51,7 +59,7 @@ h1{
     z-index: -1;
 }
 
-.leaf1{
+.leaf1 {
     position: absolute;
     top: 0;
     left: 0;
@@ -60,7 +68,7 @@ h1{
     width: 30vw;
 }
 
-.leaf2{
+.leaf2 {
     position: absolute;
     top: 0;
     right: 0;
@@ -69,7 +77,7 @@ h1{
     width: 32vw;
 }
 
-.leaf3{
+.leaf3 {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -79,7 +87,7 @@ h1{
     width: 29vw;
 }
 
-.leaf4{
+.leaf4 {
     position: absolute;
     bottom: 0;
     right: 0;
@@ -88,4 +96,3 @@ h1{
     height: auto;
     width: 27vw;
 }
-
